--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
   <meta name="theme-color" content="#000000">
 
   <!-- Google Analytics (GA4) -->
-  <!-- ⚠️ c'est CETTE ligne qui était cassée avant -->
+  <!-- ⚠️ ne pas modifier cette URL -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-23LLHRH2QL"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-23LLHRH2QL');
-    // pour suivre tes clics
-    function trackEvent(action,label){
+
+    // pour tracer les clics des boutons
+    function trackEvent(action, label){
       gtag('event', action, {
         event_category: 'Interaction',
         event_label: label
@@ -45,9 +46,22 @@
     html{scroll-behavior:smooth}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:var(--bg);color:#111;line-height:1.4}
 
-    header{background:#000;color:#fff;text-align:center;padding:28px;}
-    header img{display:block;margin:0 auto;width:100%;max-width:200px;height:auto;}
+    /* --- Header --- */
+    header{
+      background:#000;
+      color:#fff;
+      text-align:center;
+      padding:28px;
+    }
+    header img{
+      display:block;
+      margin:0 auto;
+      width:100%;
+      max-width:200px;
+      height:auto;
+    }
 
+    /* --- Nav --- */
     nav#topnav{
       position:sticky;top:0;z-index:20;
       display:flex;gap:18px;justify-content:center;
@@ -95,6 +109,7 @@
       font-size:14px;border-radius:999px;display:inline-flex
     }
 
+    /* --- Estimation sticky --- */
     .fare-sticky{
       position:fixed;
       top:var(--navH);
