--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     .modal-title{font-size:18px;font-weight:900;margin-bottom:6px}
     .modal-text{font-size:14px;color:#4b5563;margin-bottom:14px}
     @media (min-width:700px){
-      .hero{grid-template-columns:1.1fr .9fr}
+      .hero{display:grid;grid-template-columns:1.1fr .9fr}
       .hero-text{text-align:left}
       .hero-text h1{font-size:34px}
       .hero-text p{font-size:16px}
@@ -434,7 +434,7 @@
 
   <!-- Cloudflare Web Analytics -->
   <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
-    data-cf-beacon='{"token": "4e0fc3063cf2457692748ce00e333cd6"}'></script>
+    data-cf-beacon='{"token": "5b0e1fd2be224725bdb51d396fc4fdb5"}'></script>
   <!-- End Cloudflare Web Analytics -->
 </body>
 </html>
