--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="container">
     <section class="hero" aria-label="Présentation et réservation">
       <div class="hero-text">
-        <h1>Chauffeur <strong>VTC à Perpignan</strong></h1>
+        <h1>Chauffeur <strong>VTC Perpignan</strong></h1>
         <p>Réservez votre trajet en VTC Perpignan en quelques secondes — confort, ponctualité et fiabilité.</p>
 
         <div class="main-button">
