--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <section class="hero" aria-label="Présentation et réservation">
       <div class="hero-text">
         <h1>Chauffeur <strong>VTC Perpignan</strong></h1>
-        <p>Réservez votre trajet en VTC Perpignan en quelques secondes — confort, ponctualité et fiabilité.</p>
+        <p>Réservez votre trajet en VTC en quelques secondes — confort, ponctualité et fiabilité.</p>
 
         <div class="main-button">
           <a class="btn btn-main" href="#formResa" id="reserveBtn" onclick="trackEvent('clic_reserver','Réserver maintenant')">📅 Réservez maintenant</a>
