--- a/index.html
+++ b/index.html
@@ -231,8 +231,10 @@
       </div>
     </form>
 
+    <!-- SECTION MODIFIÉE AVEC VTC PERPIGNAN -->
     <p style="text-align:center;font-size:13px;color:#666;margin-bottom:24px;">
       Besoin d’en savoir plus ?
+      <a href="vtc-perpignan.html" style="font-weight:700;color:#000;">VTC Perpignan</a> ·
       <a href="services.html">Voir nos services</a> ·
       <a href="faq.html">Questions fréquentes</a> ·
       <a href="qui-sommes-nous.html">Qui sommes-nous ?</a> ·
